<resources>

    <string name="app_name">تیمن شاپ</string>
    <string name="splash_text">رفاه لاهیجان</string>
    <string name="welcome_page1_title">به تیمن شاپ خوش آمدید</string>
    <string name="welcome_page2_title">تیمن شاپ فروشگاهی آنلاین </string>
    <string name="welcome_page2_description">به راحتی مایحتاج خود را از میان محصولات پرکیفیت ما انتخاب کنید</string>
    <string name="welcome_page3_title">تجریه خریدی آسان</string>
    <string name="welcome_page3_description">و با چند کلید آنها را در درب منزل تحویل بگیرید</string>
    <string name="welcome_footer_website">Web: shop.refahtea.ir</string>
    <string name="welcome_footer_instagram">refahtea</string>
    <string name="welcome_footer_telegram">refahtea</string>
    <string name="welcome_footer_tel">Tel: 013 42341008</string>
    <string name="welcome_footer_email">Email: info@refahtea.ir</string>
    <string name="welcome_title_1">فروشگاه آنلاین مواد غذایی \n با ارسال رایگان</string>
    <string name="welcome_title_2">با تنوعی بی نظیر و قیمت هایی باور نکردنی</string>
</resources>
