<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/imgbg3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@drawable/bg_welcome_3" />

    <View
        android:id="@+id/imgbg2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@drawable/bg_welcome_2" />

    <View
        android:id="@+id/imgbg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@drawable/bg_welcome_1" />


    <android.support.v4.view.ViewPager
        android:id="@+id/welcomePager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v4.view.ViewPager>

    <FrameLayout
        android:id="@+id/headerBox"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <View
            android:id="@+id/imgHeader3"
            android:layout_width="282dp"
            android:layout_height="276dp"
            android:alpha="0"
            android:background="@drawable/bg_welcome_3_header" />

        <View
            android:id="@+id/imgHeader2"
            android:layout_width="282dp"
            android:layout_height="276dp"
            android:alpha="0"
            android:background="@drawable/bg_welcome_2_header" />

        <View
            android:id="@+id/imgHeader1"
            android:layout_width="282dp"
            android:layout_height="276dp"
            android:alpha="1"
            android:background="@drawable/bg_welcome_1_header" />

        <View
            android:id="@+id/imgHeaderPic3"
            android:layout_width="282dp"
            android:layout_height="245dp"
            android:background="@drawable/welcome_3_header_pic"
            android:translationY="-245dp" />

        <View
            android:id="@+id/imgHeaderPic2"
            android:layout_width="282dp"
            android:layout_height="245dp"
            android:background="@drawable/welcome_2_header_pic"
            android:translationY="-245dp" />

        <View
            android:id="@+id/imgHeaderPic1"
            android:layout_width="282dp"
            android:layout_height="245dp"
            android:background="@drawable/welcome_1_header_pic"
            android:translationY="0dp" />

    </FrameLayout>


    <RelativeLayout
        android:id="@+id/footerBox"
        android:layout_width="281dp"
        android:layout_height="109dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <View
            android:id="@+id/imgFooter3"
            android:layout_width="281dp"
            android:layout_height="109dp"
            android:alpha="0"
            android:background="@drawable/bg_welcome_3_footer" />

        <View
            android:id="@+id/imgFooter2"
            android:layout_width="281dp"
            android:layout_height="109dp"
            android:alpha="0"
            android:background="@drawable/bg_welcome_2_footer" />

        <View
            android:id="@+id/imgFooter1"
            android:layout_width="281dp"
            android:layout_height="109dp"
            android:alpha="1"
            android:background="@drawable/bg_welcome_1_footer" />

        <LinearLayout
            android:id="@+id/footerLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_footer_email"
                android:textColor="#fff"
                android:textSize="11dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/welcome_footer_website"
                android:textColor="#fff"
                android:textSize="11dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/footerLine2"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/ic_telegram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:drawablePadding="5dp"
                android:text="@string/welcome_footer_telegram"
                android:textColor="#fff"
                android:textSize="11dp" />

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_instagram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:drawablePadding="5dp"
                android:text="@string/welcome_footer_instagram"
                android:textColor="#fff"
                android:textSize="11dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="9dp"
                android:text="@string/welcome_footer_tel"
                android:textColor="#fff"
                android:textSize="11dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/middleBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/footerBox"
        android:layout_below="@id/headerBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/imgLogo1"
                android:layout_width="126dp"
                android:layout_height="93dp"
                android:background="@drawable/welcome_1_logo"
                android:scaleX="1"
                android:scaleY="1" />

            <View
                android:id="@+id/imgLogo2"
                android:layout_width="126dp"
                android:layout_height="93dp"
                android:background="@drawable/welcome_2_logo"
                android:scaleX="0"
                android:scaleY="0" />

            <View
                android:id="@+id/imgLogo3"
                android:layout_width="126dp"
                android:layout_height="93dp"
                android:background="@drawable/welcome_3_logo"
                android:scaleX="0"
                android:scaleY="0" />
        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtWelcome3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:alpha="0"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="#fff"
                android:background="@color/colorWelcome3_main"
                android:text="@string/start"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/txtWelcome2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:alpha="0"
                android:textColor="@color/colorWelcome2_main"
                android:text="@string/welcome_title_2"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtWelcome1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:alpha="1"
                android:textColor="@color/colorWelcome1_main"
                android:text="@string/welcome_title_1"
                android:textSize="20dp" />
        </FrameLayout>


    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/leftArrow3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:alpha="0"
            app:srcCompat="@drawable/ic_chevron_left_welcome_3" />
        <ImageView
            android:id="@+id/leftArrow2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:alpha="0"
            app:srcCompat="@drawable/ic_chevron_left_welcome_2" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/rightArrow2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:alpha="0"
            app:srcCompat="@drawable/ic_chevron_right_welcome_2" />
        <ImageView
            android:id="@+id/rightArrow1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:alpha="1"
            app:srcCompat="@drawable/ic_chevron_right_welcome_1" />
    </FrameLayout>
</RelativeLayout>